# OpenKF

./: .clang-format  CMakeLists.txt  LICENSE  LICENSE.md  README.md  bootstrap-openkf.bat
.cache/clangd/index/: dummy.cpp.DD0D404C08096709.idx  ego_motion_model.cpp.63DD27C0574C7AF4.idx  ego_motion_model.h.F36EF4DDAAFC5176.idx  ego_motion_model_test.cpp.0A429AF5AC57FB16.idx  gmock-actions.h.A1B5FD9C1B310806.idx  gmock-all.cc.DAE0DE9DFAF88F71.idx  gmock-cardinalities.cc.9398110F6196350C.idx  gmock-cardinalities.h.ED3558AECFBF2B7C.idx  gmock-function-mocker.h.57CF012C1D3B97F0.idx  gmock-generated-actions.h.E651FC2A9AF1082D.idx  gmock-internal-utils.cc.BE92E28AD8FD89AC.idx  gmock-internal-utils.h.BE7D8CA3C42CAF7C.idx  gmock-matchers.cc.2B9172100AF3A489.idx  gmock-matchers.h.A08104D8EE1E0970.idx  gmock-matchers.h.CFDFE4B7126A5CC7.idx  gmock-more-actions.h.EE6976BD6B89BDBF.idx  gmock-more-matchers.h.C7B9B96B37B751A8.idx  gmock-nice-strict.h.6B9501FC982ED17C.idx  gmock-port.h.23026FD70E701932.idx  gmock-port.h.C552C1B69EA8E24A.idx  gmock-pp.h.8D19053357DF7501.idx  gmock.cc.7B7156E1C8F7DCB6.idx  gmock.h.FC554658E402349F.idx  gmock_main.cc.2E567EB749DF7F3E.idx  gtest-all.cc.D6DC331409B44F81.idx  gtest-assertion-result.cc.75D8811B5801C31C.idx  gtest-assertion-result.h.55DC7C7D4CCCB717.idx  gtest-death-test-internal.h.73F3E41D219ECDDB.idx  gtest-death-test.cc.5AA9E8D97919BB1F.idx  gtest-death-test.h.CB2BDE5FC2D78197.idx  gtest-filepath.cc.1F9D140D76DE95CF.idx  gtest-filepath.h.E4EBDB820A3B9704.idx  gtest-internal-inl.h.E5C56A78B3876931.idx  gtest-internal.h.CA3120BE5D332688.idx  gtest-matchers.cc.E5E80D35B891B4F9.idx  gtest-matchers.h.B7FD35F660BEAE40.idx  gtest-message.h.C5BF209B2B1B8DB4.idx  gtest-param-test.h.E1BE1EC6065448CE.idx  gtest-param-util.h.3A2E3987DCB070FA.idx  gtest-port-arch.h.D4703C239FC5F49E.idx  (+38 more)
.github/workflows/: clang-format-check.yml  cmake-multi-platform.yml  cmake-single-platform.yml  cppcheck.yml  release.yml
Examples/: CMakeLists.txt
Examples/ekf_range_sensor/: main.cpp
Examples/kf_state_estimation/: main.cpp
Examples/sr_ukf_linear_function/: main.cpp
Examples/test_least_squares/: main.cpp
Examples/ukf_range_sensor/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
Examples/unscented_transform/: main.cpp
cpp/: CMakeLists.txt
cpp/Examples/: CMakeLists.txt
cpp/Examples/EkfRangeSensor/: CMakeLists.txt  main.cpp
cpp/Examples/StateEstimation1D/: CMakeLists.txt  main.cpp
cpp/Examples/ekf_range_sensor/: CMakeLists.txt  main.cpp
cpp/Examples/kf_state_estimation/: CMakeLists.txt  main.cpp
cpp/Examples/sr_ukf_linear_function/: CMakeLists.txt  main.cpp
cpp/Examples/test_least_squares/: CMakeLists.txt  main.cpp
cpp/Examples/ukf_range_sensor/: CMakeLists.txt  main.cpp
cpp/Examples/unscented_transform/: CMakeLists.txt  main.cpp
cpp/KalmanFilter/: CMakeLists.txt  KalmanFilter.h  Types.h
cpp/examples/: CMakeLists.txt
cpp/examples/ekf_range_sensor/: CMakeLists.txt
cpp/examples/kf_state_estimation/: CMakeLists.txt  main.cpp
cpp/examples/test_least_squares/: CMakeLists.txt  main.cpp
cpp/examples/ukf_range_sensor/: main.cpp
cpp/kalman_filter/: CMakeLists.txt  kalman_filter.h  square_root_ukf.h  types.h  unscented_kalman_filter.h  unscented_transform.h  util.h
cpp/openkf/: CMakeLists.txt  dummy.cpp  util.h
cpp/openkf/conf/: Config.cmake.in
cpp/openkf/kalman_filter/: kalman_filter.h  square_root_ukf.h  unscented_kalman_filter.h  unscented_transform.h
cpp/openkf/tests/: CMakeLists.txt  kalman_filter_test.cpp  square_root_ukf_test.cpp  unscented_kalman_filter_test.cpp  unscented_trasform_test.cpp
kalman_filter/: dummy.cpp  kalman_filter.h  types.h  unscented_kalman_filter.h  unscented_transform.h  util.h
kalman_filter/conf/: Config.cmake.in
python/examples/: Introduction_Extended_Kalman_Filter.ipynb  Introduction_Kalman_Filter.ipynb  Introduction_Unscented_Kalman_Filter.ipynb  Introduction_Unscented_Transformation.ipynb  KalmanFilterIllustration.ipynb  Square_Root_Unscented_Kalman_Filter.ipynb  Understanding_Gaussian_Distribution.ipynb
python/examples/.ipynb_checkpoints/: KalmanFilterIllustration-checkpoint.ipynb
src/examples/: CMakeLists.txt
src/examples/ego_motion_model_adapter/: CMakeLists.txt  main.cpp
src/examples/ekf_range_sensor/: CMakeLists.txt  main.cpp
src/examples/kf_state_estimation/: CMakeLists.txt  main.cpp
src/examples/sr_ukf_linear_function/: CMakeLists.txt  main.cpp
src/examples/test_least_squares/: CMakeLists.txt  main.cpp
src/examples/ukf_range_sensor/: CMakeLists.txt  main.cpp
src/examples/unscented_transform/: CMakeLists.txt  main.cpp
src/openkf/: CMakeLists.txt  types.h  util.h
src/openkf/kalman_filter/: kalman_filter.h  square_root_ukf.h  unscented_kalman_filter.h  unscented_transform.h
src/openkf/motion_model/: ego_motion_model.cpp  ego_motion_model.h  motion_model.h
src/openkf/tests/: CMakeLists.txt  kalman_filter_test.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  unit_tests.cpp
tests/unit/kalman_filter/: kalman_filter_test.cpp  square_root_ukf_test.cpp  unscented_kalman_filter_test.cpp  unscented_trasform_test.cpp
tests/unit/motion_model/: ego_motion_model_test.cpp
